--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="max-width=device-width,min-width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>all1</title>
   </head>
